# p4c-pd

./: .gitignore  AUTHORS.rst  pyproject.toml  requirements.txt  run.py  setup.cfg
p4c_pd/: __init__.py  __main__.py  gen_pd.py  main.py  version.py
p4c_pd/templates/pd/: pd_learning.h  pd_tables.h
p4c_pd/templates/src/: pd_learning.cpp  pd_tables.cpp
p4c_pd/templates/thrift/: p4_pd_rpc.thrift
p4c_pd/templates/thrift-src/: p4_pd_rpc_server.ipp  pd_rpc_server.cpp
p4c_pd/util/: __init__.py  tenjin_wrapper.py
