[metadata]
name = p4c_pd
license = Apache
description = Generates the PD C/C++ code for the behavioral-model from P4-16 json file.
url = https://github.com/Stanislav-lw/p4c-pd
classifiers =
    License :: OSI Approved :: Apache License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Code Generators
    Environment :: Console

[options]
packages = find:
package_dir =
include_package_data = True
setup_requires = setuptools>=44; wheel; toml; setuptools_scm>=3.4.3; Tenjin==1.1.1
python_requires = >=3.7

[options.entry_points]
console_scripts = p4c-pd = p4c_pd.main:main